// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleCard /> by default matches with snapshot 1`] = `
<div
  className="k-Card k-Card--withoutBoxShadowOnHover"
  style={
    Object {
      "lineHeight": 1,
    }
  }
>
  <div
    className="k-Card__imageContainer marger__StyledMarger-q3lecu-0 jgfcQX"
  >
    <img
      alt=""
      className="k-Card__image"
      src="https://placehold.it/200x200/caf4fe/caf4fe"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 cHJBWz"
  >
    <span
      className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gBRCkl"
    />
  </div>
</div>
`;

exports[`<SimpleCard /> without horizontalStroke prop matches snapshot 1`] = `
<div
  className="k-Card k-Card--withoutBoxShadowOnHover"
  style={
    Object {
      "lineHeight": 1,
    }
  }
>
  <div
    className="k-Card__imageContainer marger__StyledMarger-q3lecu-0 jgfcQX"
  >
    <img
      alt=""
      className="k-Card__image"
      src="https://placehold.it/200x200/caf4fe/caf4fe"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;
